[WIP] Setup basic render / game loop and worked on D3D12 graphics abstractions.
Additional changes:
(i) Used references over pointers for passing D3D12 objects to constructors and other functions (since they are not supposed to be null).
(ii) Made the swapchain a singleton instance, so it can be accessed and used without going through the device.
(iii) Addded simple timer class.
(iv) The renderer will useful bindless rendering, so descriptor heaps have some constructs to help with that.

--- a/src/utils/CMakeLists.txt
+++ b/src/utils/CMakeLists.txt
@@ -3,4 +3,8 @@ set(SERENITY_ENGINE_INCLUDE_PATH "${PROJECT_SOURCE_DIR}/include/serenity-engine"
 target_sources(serenity-engine PUBLIC
 	"${SERENITY_ENGINE_INCLUDE_PATH}/utils/enum_value.hpp"
 	"${SERENITY_ENGINE_INCLUDE_PATH}/utils/string_conversions.hpp"
+	"${SERENITY_ENGINE_INCLUDE_PATH}/utils/primitive_datatypes.hpp"
+
+	"${SERENITY_ENGINE_INCLUDE_PATH}/utils/timer.hpp"
+	"timer.cpp"
 )
