--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -11,4 +11,4 @@ add_subdirectory(main)
 target_precompile_headers(serenity-engine PUBLIC "${PROJECT_SOURCE_DIR}/include/serenity-engine/pch.hpp")
 target_compile_definitions(serenity-engine PUBLIC "$<$<CONFIG:DEBUG>:DEF_SERENITY_DEBUG>")
 target_include_directories(serenity-engine PUBLIC "${PROJECT_SOURCE_DIR}/include/" PRIVATE "${PROJECT_SOURCE_DIR}/include/serenity-engine/")
-target_link_libraries(serenity-engine PUBLIC external d3d12 dxgi dxguid)
+target_link_libraries(serenity-engine PUBLIC external d3d12 dxgi dxguid dxcompiler)
