--- a/src/graphics/CMakeLists.txt
+++ b/src/graphics/CMakeLists.txt
@@ -2,6 +2,7 @@ set(SERENITY_ENGINE_INCLUDE_PATH "${PROJECT_SOURCE_DIR}/include/serenity-engine"
 
 target_sources(serenity-engine PUBLIC
 	"${SERENITY_ENGINE_INCLUDE_PATH}/graphics/d3d_utils.hpp"
+	"${SERENITY_ENGINE_INCLUDE_PATH}/graphics/buffer.hpp"
 
 	"${SERENITY_ENGINE_INCLUDE_PATH}/graphics/command_list.hpp"
 	"command_list.cpp"
@@ -20,4 +21,10 @@ target_sources(serenity-engine PUBLIC
 
 	"${SERENITY_ENGINE_INCLUDE_PATH}/graphics/shader_compiler.hpp"
 	"shader_compiler.cpp"
+
+	"${SERENITY_ENGINE_INCLUDE_PATH}/graphics/root_signature.hpp"
+	"root_signature.cpp"
+
+	"${SERENITY_ENGINE_INCLUDE_PATH}/graphics/pipeline.hpp"
+	"pipeline.cpp"
 )
