Added depth stencil texture creation, scene camera, basic mesh and gltf mesh loader classes
Additional changes:
Switched free functions from static inline to inline.
Updated command list to support indexed drawing.
Updated pipeline to support depth buffering.
Created interop folder in shaders directory to facilitate sharing of code between hlsl and C++.

--- a/game/CMakeLists.txt
+++ b/game/CMakeLists.txt
@@ -1,4 +1,4 @@
-add_executable(game "sandbox.cpp")
+add_executable(game "game.cpp")
 target_link_libraries(game PRIVATE serenity-engine)
 
 # Set the Visual studio debugger working directory.
