Added feature to set window event callbacks, basic imgui integration

--- a/external/CMakeLists.txt
+++ b/external/CMakeLists.txt
@@ -30,6 +30,34 @@ FetchContent_Declare(
 
 FetchContent_MakeAvailable(SDL3 glm spdlog tinygltf)
 
+
+FetchContent_Declare(
+    imgui
+    GIT_REPOSITORY https://github.com/ocornut/imgui
+    GIT_TAG 475453668d7da1662bf90266c5f0df0259705987
+    GIT_PROGRESS TRUE
+)
+
+FetchContent_MakeAvailable(imgui)
+
+add_library(libimgui
+    ${imgui_SOURCE_DIR}/imgui.cpp
+    ${imgui_SOURCE_DIR}/imgui_demo.cpp
+    ${imgui_SOURCE_DIR}/imgui_draw.cpp
+    ${imgui_SOURCE_DIR}/imgui_widgets.cpp
+    ${imgui_SOURCE_DIR}/imgui_tables.cpp
+    ${imgui_SOURCE_DIR}/backends/imgui_impl_sdl3.cpp
+    ${imgui_SOURCE_DIR}/backends/imgui_impl_dx12.cpp
+)
+
+target_include_directories(libimgui PUBLIC 
+${imgui_SOURCE_DIR} 
+${imgui_SOURCE_DIR}/backends
+${sdl2_SOURCE_DIR}/include
+)
+
+target_link_libraries(libimgui PUBLIC SDL3::SDL3)
+
 add_library(external INTERFACE)
-target_link_libraries(external INTERFACE SDL3::SDL3 tinygltf)	
+target_link_libraries(external INTERFACE SDL3::SDL3 tinygltf libimgui)	
 target_include_directories(external INTERFACE ${sdl3_SOURCE_DIR}/include ${glm_SOURCE_DIR} ${spdlog_SOURCE_DIR}/include ${tinygltf_SOURCE_DIR}) 
