Switched to fastgltf for model loading, added scene and scene manager abstractions
Additional notes:
The editor is completely detached from the game (i.e you dont have to pass anything to the editor since it uses the singleton instances for device and scene manager).

--- a/src/scene/CMakeLists.txt
+++ b/src/scene/CMakeLists.txt
@@ -1,7 +1,13 @@
 set(SERENITY_ENGINE_INCLUDE_PATH "${PROJECT_SOURCE_DIR}/include/serenity-engine")
 
 target_sources(serenity-engine PUBLIC
-	"${SERENITY_ENGINE_INCLUDE_PATH}/scene/mesh.hpp"
+	"${SERENITY_ENGINE_INCLUDE_PATH}/scene/model.hpp"
+	
+	"${SERENITY_ENGINE_INCLUDE_PATH}/scene/scene.hpp"
+	"scene.cpp"
+
+	"${SERENITY_ENGINE_INCLUDE_PATH}/scene/scene_manager.hpp"
+	"scene_manager.cpp"
 
 	"${SERENITY_ENGINE_INCLUDE_PATH}/scene/camera.hpp"
 	"camera.cpp"
