--- a/data/editor.ini
+++ b/data/editor.ini
@@ -10,14 +10,35 @@ Collapsed=0
 
 [Window][Test]
 Pos=60,60
-Size=32,35
+Size=156,98
 Collapsed=0
 
 [Window][Dear ImGui Demo]
-Pos=1160,443
-Size=550,680
+Pos=1417,498
+Size=311,474
+Collapsed=0
+DockId=0x00000002,0
+
+[Window][Example: Simple layout]
+Pos=60,60
+Size=500,440
 Collapsed=0
 
+[Window][Dear ImGui Style Editor]
+Pos=65,-4
+Size=353,947
+Collapsed=0
+
+[Window][Camera Settings]
+Pos=1417,19
+Size=311,477
+Collapsed=0
+DockId=0x00000001,0
+
 [Docking][Data]
-DockSpace ID=0x8B93E3BD Window=0xA787BDB4 Pos=0,19 Size=1728,953 CentralNode=1
+DockSpace     ID=0x8B93E3BD Window=0xA787BDB4 Pos=0,19 Size=1728,953 Split=X
+  DockNode    ID=0x00000003 Parent=0x8B93E3BD SizeRef=1415,953 CentralNode=1
+  DockNode    ID=0x00000004 Parent=0x8B93E3BD SizeRef=311,953 Split=Y Selected=0x3D5DC369
+    DockNode  ID=0x00000001 Parent=0x00000004 SizeRef=257,477 Selected=0x3D5DC369
+    DockNode  ID=0x00000002 Parent=0x00000004 SizeRef=257,474 Selected=0xE87781F4
 
