Added basic texture loader using stb image, transform component for models and updated the editor to edit scene

--- a/data/editor.ini
+++ b/data/editor.ini
@@ -14,10 +14,10 @@ Size=156,98
 Collapsed=0
 
 [Window][Dear ImGui Demo]
-Pos=1417,498
-Size=311,474
+Pos=1457,19
+Size=271,953
 Collapsed=0
-DockId=0x00000002,0
+DockId=0x00000004,0
 
 [Window][Example: Simple layout]
 Pos=60,60
@@ -30,15 +30,28 @@ Size=353,947
 Collapsed=0
 
 [Window][Camera Settings]
-Pos=1417,19
-Size=311,477
+Pos=0,434
+Size=300,538
+Collapsed=0
+DockId=0x00000002,0
+
+[Window][Scene Hierarchy]
+Pos=0,19
+Size=300,413
 Collapsed=0
 DockId=0x00000001,0
 
+[Window][Cube]
+Pos=60,245
+Size=382,100
+Collapsed=0
+
 [Docking][Data]
 DockSpace     ID=0x8B93E3BD Window=0xA787BDB4 Pos=0,19 Size=1728,953 Split=X
-  DockNode    ID=0x00000003 Parent=0x8B93E3BD SizeRef=1415,953 CentralNode=1
-  DockNode    ID=0x00000004 Parent=0x8B93E3BD SizeRef=311,953 Split=Y Selected=0x3D5DC369
-    DockNode  ID=0x00000001 Parent=0x00000004 SizeRef=257,477 Selected=0x3D5DC369
-    DockNode  ID=0x00000002 Parent=0x00000004 SizeRef=257,474 Selected=0xE87781F4
+  DockNode    ID=0x00000006 Parent=0x8B93E3BD SizeRef=300,953 Split=Y Selected=0x2E9237F7
+    DockNode  ID=0x00000001 Parent=0x00000006 SizeRef=283,413 Selected=0x2E9237F7
+    DockNode  ID=0x00000002 Parent=0x00000006 SizeRef=283,538 Selected=0x3D5DC369
+  DockNode    ID=0x00000007 Parent=0x8B93E3BD SizeRef=1426,953 Split=X
+    DockNode  ID=0x00000003 Parent=0x00000007 SizeRef=1153,953 CentralNode=1
+    DockNode  ID=0x00000004 Parent=0x00000007 SizeRef=271,953 Selected=0xE87781F4
 
