--- a/src/asset/CMakeLists.txt
+++ b/src/asset/CMakeLists.txt
@@ -3,4 +3,7 @@ set(SERENITY_ENGINE_INCLUDE_PATH "${PROJECT_SOURCE_DIR}/include/serenity-engine/
 target_sources(serenity-engine PUBLIC
 	"${SERENITY_ENGINE_INCLUDE_PATH}/asset/model_loader.hpp"
 	"model_loader.cpp"
+
+	"${SERENITY_ENGINE_INCLUDE_PATH}/asset/model_loader.hpp"
+	"texture_loader.cpp"
 )
