Added application config struct and scene buffer, modified file system so it returns absolute file path after checking if path is already absolute

--- a/src/asset/CMakeLists.txt
+++ b/src/asset/CMakeLists.txt
@@ -2,6 +2,6 @@ target_sources(serenity-engine PUBLIC
 	"${SERENITY_ENGINE_INCLUDE_PATH}/asset/model_loader.hpp"
 	"model_loader.cpp"
 
-	"${SERENITY_ENGINE_INCLUDE_PATH}/asset/model_loader.hpp"
+	"${SERENITY_ENGINE_INCLUDE_PATH}/asset/texture_loader.hpp"
 	"texture_loader.cpp"
 )
