--- a/data/editor.ini
+++ b/data/editor.ini
@@ -1,6 +1,6 @@
 [Window][DockSpaceViewport_11111111]
 Pos=0,19
-Size=1766,974
+Size=1920,1061
 Collapsed=0
 
 [Window][Debug##Default]
@@ -8,50 +8,31 @@ Pos=60,60
 Size=400,400
 Collapsed=0
 
-[Window][Test]
+[Window][Camera Settings]
 Pos=60,60
-Size=156,98
+Size=138,100
+Collapsed=0
+
+[Window][Sun Angle]
+Pos=60,60
+Size=103,54
+Collapsed=0
+
+[Window][Scene Hierarchy]
+Pos=54,278
+Size=128,48
+Collapsed=0
+
+[Window][Atmosphere Settings]
+Pos=35,171
+Size=103,54
 Collapsed=0
 
 [Window][Dear ImGui Demo]
-Pos=1495,19
-Size=271,974
-Collapsed=0
-DockId=0x00000004,0
-
-[Window][Example: Simple layout]
-Pos=60,60
-Size=500,440
-Collapsed=0
-
-[Window][Dear ImGui Style Editor]
-Pos=65,-4
-Size=353,947
-Collapsed=0
-
-[Window][Camera Settings]
-Pos=0,619
-Size=300,374
-Collapsed=0
-DockId=0x00000002,0
-
-[Window][Scene Hierarchy]
-Pos=0,19
-Size=300,598
-Collapsed=0
-DockId=0x00000001,0
-
-[Window][Cube]
-Pos=60,245
-Size=382,100
-Collapsed=0
+Pos=1287,239
+Size=550,680
+Collapsed=1
 
 [Docking][Data]
-DockSpace     ID=0x8B93E3BD Window=0xA787BDB4 Pos=0,19 Size=1766,974 Split=X
-  DockNode    ID=0x00000006 Parent=0x8B93E3BD SizeRef=300,953 Split=Y Selected=0x2E9237F7
-    DockNode  ID=0x00000001 Parent=0x00000006 SizeRef=283,585 Selected=0x2E9237F7
-    DockNode  ID=0x00000002 Parent=0x00000006 SizeRef=283,366 Selected=0x3D5DC369
-  DockNode    ID=0x00000007 Parent=0x8B93E3BD SizeRef=1426,953 Split=X
-    DockNode  ID=0x00000003 Parent=0x00000007 SizeRef=1153,953 CentralNode=1
-    DockNode  ID=0x00000004 Parent=0x00000007 SizeRef=271,953 Selected=0xE87781F4
+DockSpace ID=0x8B93E3BD Window=0xA787BDB4 Pos=0,19 Size=1920,1061 CentralNode=1
 
