HDR and Tone mapping (Aces approximation)

--- a/data/editor.ini
+++ b/data/editor.ini
@@ -9,30 +9,41 @@ Size=400,400
 Collapsed=0
 
 [Window][Camera Settings]
-Pos=82,519
-Size=418,194
+Pos=1534,394
+Size=295,135
 Collapsed=0
+DockId=0x00000002,0
 
 [Window][Sun Angle]
-Pos=37,380
-Size=103,54
+Pos=1534,531
+Size=295,134
 Collapsed=0
+DockId=0x00000003,0
 
-[Window][Scene Hierarchy]
-Pos=157,240
-Size=240,163
+[Window][Default Scene]
+Pos=1534,667
+Size=295,122
 Collapsed=0
+DockId=0x00000005,0
 
 [Window][Atmosphere Settings]
-Pos=18,817
-Size=430,142
+Pos=1534,791
+Size=295,219
 Collapsed=0
+DockId=0x00000007,0
 
 [Window][Dear ImGui Demo]
-Pos=1287,239
+Pos=662,288
 Size=550,680
-Collapsed=1
+Collapsed=0
 
 [Docking][Data]
-DockSpace ID=0x8B93E3BD Window=0xA787BDB4 Pos=0,19 Size=1920,1061 CentralNode=1
+DockNode        ID=0x00000001 Pos=1534,394 Size=295,616 Split=Y
+  DockNode      ID=0x00000006 Parent=0x00000001 SizeRef=263,395 Split=Y
+    DockNode    ID=0x00000004 Parent=0x00000006 SizeRef=263,271 Split=Y
+      DockNode  ID=0x00000002 Parent=0x00000004 SizeRef=263,136 Selected=0x3D5DC369
+      DockNode  ID=0x00000003 Parent=0x00000004 SizeRef=263,134 Selected=0x8EDD6DC9
+    DockNode    ID=0x00000005 Parent=0x00000006 SizeRef=263,122 Selected=0x5911271C
+  DockNode      ID=0x00000007 Parent=0x00000001 SizeRef=263,219 Selected=0x3D9D17D5
+DockSpace       ID=0x8B93E3BD Window=0xA787BDB4 Pos=0,19 Size=1920,1061 CentralNode=1
 
