Shader / pipeline hot reloading
Notes:
Pipelines now work very similar to buffers / textures as the renderer has a vector of pipelines and the create_pipeline function returns a index into this array.
This is not the best architecture but vastly simplifies code for the current engine scope.
Shaders have also been modified slightly to allow for shader reloading

--- a/data/editor.ini
+++ b/data/editor.ini
@@ -4,46 +4,68 @@ Size=1920,1061
 Collapsed=0
 
 [Window][Debug##Default]
-Pos=60,60
-Size=400,400
+Pos=1271,297
+Size=402,400
 Collapsed=0
 
 [Window][Camera Settings]
-Pos=1589,399
-Size=295,135
+Pos=0,328
+Size=292,376
 Collapsed=0
-DockId=0x00000002,0
+DockId=0x00000006,0
 
 [Window][Sun Angle]
-Pos=1589,536
-Size=295,134
+Pos=461,363
+Size=191,954
+Collapsed=0
+
+[Window][Default Scene]
+Pos=0,19
+Size=292,465
+Collapsed=0
+DockId=0x00000009,0
+
+[Window][Atmosphere Settings]
+Pos=0,508
+Size=292,572
+Collapsed=0
+DockId=0x00000008,0
+
+[Window][Dear ImGui Demo]
+Pos=0,672
+Size=292,408
+Collapsed=0
+DockId=0x0000000C,0
+
+[Window][Scene Panel]
+Pos=0,19
+Size=388,1061
 Collapsed=0
 DockId=0x00000003,0
 
-[Window][Default Scene]
-Pos=1589,672
-Size=295,117
+[Window][Renderer Panel]
+Pos=0,486
+Size=292,594
 Collapsed=0
-DockId=0x00000005,0
+DockId=0x0000000B,0
 
-[Window][Atmosphere Settings]
-Pos=1589,791
-Size=295,224
-Collapsed=0
-DockId=0x00000007,0
-
-[Window][Dear ImGui Demo]
-Pos=662,288
-Size=550,680
+[Window][Pipelines]
+Pos=81,607
+Size=292,364
 Collapsed=0
 
 [Docking][Data]
-DockNode        ID=0x00000001 Pos=1589,399 Size=295,616 Split=Y
-  DockNode      ID=0x00000006 Parent=0x00000001 SizeRef=263,390 Split=Y
-    DockNode    ID=0x00000004 Parent=0x00000006 SizeRef=263,271 Split=Y
-      DockNode  ID=0x00000002 Parent=0x00000004 SizeRef=263,136 Selected=0x3D5DC369
-      DockNode  ID=0x00000003 Parent=0x00000004 SizeRef=263,134 Selected=0x8EDD6DC9
-    DockNode    ID=0x00000005 Parent=0x00000006 SizeRef=263,117 Selected=0x5911271C
-  DockNode      ID=0x00000007 Parent=0x00000001 SizeRef=263,224 Selected=0x3D9D17D5
-DockSpace       ID=0x8B93E3BD Window=0xA787BDB4 Pos=0,19 Size=1920,1061 CentralNode=1
+DockSpace           ID=0x8B93E3BD Window=0xA787BDB4 Pos=0,19 Size=1920,1061 Split=X
+  DockNode          ID=0x00000001 Parent=0x8B93E3BD SizeRef=292,1061 Split=Y Selected=0x5911271C
+    DockNode        ID=0x00000005 Parent=0x00000001 SizeRef=292,307 Split=Y Selected=0x5911271C
+      DockNode      ID=0x00000007 Parent=0x00000005 SizeRef=292,487 Split=Y Selected=0x5911271C
+        DockNode    ID=0x00000009 Parent=0x00000007 SizeRef=292,465 Selected=0x5911271C
+        DockNode    ID=0x0000000A Parent=0x00000007 SizeRef=292,594 Split=Y Selected=0x32FCB9E3
+          DockNode  ID=0x0000000B Parent=0x0000000A SizeRef=292,184 Selected=0x32FCB9E3
+          DockNode  ID=0x0000000C Parent=0x0000000A SizeRef=292,408 Selected=0xE87781F4
+      DockNode      ID=0x00000008 Parent=0x00000005 SizeRef=292,572 Selected=0x3D9D17D5
+    DockNode        ID=0x00000006 Parent=0x00000001 SizeRef=292,752 Selected=0x3D5DC369
+  DockNode          ID=0x00000002 Parent=0x8B93E3BD SizeRef=1626,1061 Split=X
+    DockNode        ID=0x00000003 Parent=0x00000002 SizeRef=388,1061 Selected=0x1D09C2A5
+    DockNode        ID=0x00000004 Parent=0x00000002 SizeRef=1530,1061 CentralNode=1
 
