Added cube map render pass, modified atmosphere render pass to render to a texture cube
Note : This change has been done so when PBR is implemented it becomes easy to sample the atmosphere (rather than having to compute redundant results)

--- a/data/editor.ini
+++ b/data/editor.ini
@@ -21,9 +21,9 @@ Collapsed=0
 
 [Window][Default Scene]
 Pos=0,19
-Size=292,692
+Size=292,492
 Collapsed=0
-DockId=0x00000009,0
+DockId=0x0000000B,0
 
 [Window][Atmosphere Settings]
 Pos=0,508
@@ -32,10 +32,9 @@ Collapsed=0
 DockId=0x00000008,0
 
 [Window][Dear ImGui Demo]
-Pos=0,672
-Size=292,408
+Pos=680,441
+Size=673,445
 Collapsed=0
-DockId=0x0000000C,0
 
 [Window][Scene Panel]
 Pos=0,19
@@ -44,28 +43,45 @@ Collapsed=0
 DockId=0x00000003,0
 
 [Window][Renderer Panel]
-Pos=0,713
-Size=292,367
+Pos=0,513
+Size=292,567
 Collapsed=0
-DockId=0x0000000B,0
+DockId=0x0000000C,0
 
 [Window][Pipelines]
 Pos=81,607
 Size=292,364
 Collapsed=0
 
+[Window][Example: Property editor]
+Pos=60,60
+Size=430,450
+Collapsed=0
+
+[Window][Dear ImGui Style Editor]
+Pos=1150,54
+Size=353,1055
+Collapsed=0
+
+[Window][About Dear ImGui]
+Pos=65,61
+Size=570,126
+Collapsed=0
+
+[Table][0xD0F0C6E3,2]
+Column 0  Weight=1.0000
+Column 1  Weight=1.0000
+
 [Docking][Data]
-DockSpace           ID=0x8B93E3BD Window=0xA787BDB4 Pos=0,19 Size=1920,1061 Split=X
-  DockNode          ID=0x00000001 Parent=0x8B93E3BD SizeRef=292,1061 Split=Y Selected=0x5911271C
-    DockNode        ID=0x00000005 Parent=0x00000001 SizeRef=292,307 Split=Y Selected=0x5911271C
-      DockNode      ID=0x00000007 Parent=0x00000005 SizeRef=292,487 Split=Y Selected=0x5911271C
-        DockNode    ID=0x00000009 Parent=0x00000007 SizeRef=292,692 Selected=0x5911271C
-        DockNode    ID=0x0000000A Parent=0x00000007 SizeRef=292,367 Split=Y Selected=0x32FCB9E3
-          DockNode  ID=0x0000000B Parent=0x0000000A SizeRef=292,184 Selected=0x32FCB9E3
-          DockNode  ID=0x0000000C Parent=0x0000000A SizeRef=292,408 Selected=0xE87781F4
-      DockNode      ID=0x00000008 Parent=0x00000005 SizeRef=292,572 Selected=0x3D9D17D5
-    DockNode        ID=0x00000006 Parent=0x00000001 SizeRef=292,752 Selected=0x3D5DC369
-  DockNode          ID=0x00000002 Parent=0x8B93E3BD SizeRef=1626,1061 Split=X
-    DockNode        ID=0x00000003 Parent=0x00000002 SizeRef=388,1061 Selected=0x1D09C2A5
-    DockNode        ID=0x00000004 Parent=0x00000002 SizeRef=1530,1061 CentralNode=1
+DockSpace         ID=0x8B93E3BD Window=0xA787BDB4 Pos=0,19 Size=1920,1061 Split=X
+  DockNode        ID=0x00000001 Parent=0x8B93E3BD SizeRef=292,1061 Split=Y Selected=0x5911271C
+    DockNode      ID=0x00000005 Parent=0x00000001 SizeRef=292,307 Split=Y Selected=0x5911271C
+      DockNode    ID=0x00000007 Parent=0x00000005 SizeRef=292,487 Split=Y Selected=0x5911271C
+        DockNode  ID=0x0000000B Parent=0x00000007 SizeRef=292,492 Selected=0x5911271C
+        DockNode  ID=0x0000000C Parent=0x00000007 SizeRef=292,567 Selected=0x32FCB9E3
+      DockNode    ID=0x00000008 Parent=0x00000005 SizeRef=292,572 Selected=0x3D9D17D5
+    DockNode      ID=0x00000006 Parent=0x00000001 SizeRef=292,752 Selected=0x3D5DC369
+  DockNode        ID=0x00000002 Parent=0x8B93E3BD SizeRef=1411,1061 Split=X
+    DockNode      ID=0x00000003 Parent=0x00000002 SizeRef=388,1061 Selected=0x1D09C2A5
+    DockNode      ID=0x00000004 Parent=0x00000002 SizeRef=1530,1061 CentralNode=1
 
