Abstracted post processing and shading renderpasses, wrapped constant buffers and render resources under interop namespace, minor code improvements in phong shading model

--- a/src/renderer/renderpass/CMakeLists.txt
+++ b/src/renderer/renderpass/CMakeLists.txt
@@ -4,4 +4,10 @@ target_sources(serenity-engine PUBLIC
 
 	"${SERENITY_ENGINE_INCLUDE_PATH}/renderer/renderpass/cube_map_renderpass.hpp"
 	"cube_map_renderpass.cpp"
+	
+	"${SERENITY_ENGINE_INCLUDE_PATH}/renderer/renderpass/shading_renderpass.hpp"
+	"shading_renderpass.cpp"
+
+	"${SERENITY_ENGINE_INCLUDE_PATH}/renderer/renderpass/post_processing_renderpass.hpp"
+	"post_processing_renderpass.cpp"
 )
