--- a/src/scene/CMakeLists.txt
+++ b/src/scene/CMakeLists.txt
@@ -1,5 +1,6 @@
 target_sources(serenity-engine PUBLIC
-	"${SERENITY_ENGINE_INCLUDE_PATH}/scene/model.hpp"
+	"${SERENITY_ENGINE_INCLUDE_PATH}/scene/game_object.hpp"
+	"game_object.cpp"
 	
 	"${SERENITY_ENGINE_INCLUDE_PATH}/scene/scene.hpp"
 	"scene.cpp"
