Added basic script editor and updated script manager to store all scripts internally
Note:
The script manager now holds a vector of scripts and the scriptable-things will have a index to the script in the vector.
This is done for convinence in managing the script editor UI.

--- a/data/editor.ini
+++ b/data/editor.ini
@@ -4,7 +4,7 @@ Size=1920,1061
 Collapsed=0
 
 [Window][Debug##Default]
-Pos=1271,297
+Pos=784,529
 Size=402,400
 Collapsed=0
 
@@ -68,6 +68,22 @@ Pos=65,61
 Size=570,126
 Collapsed=0
 
+[Window][C:\Dev/serenity-engine/game/scripts/test.lua]
+Pos=60,60
+Size=345,243
+Collapsed=0
+
+[Window][Scripts Panel]
+Pos=320,890
+Size=1600,190
+Collapsed=0
+DockId=0x0000000A,0
+
+[Window][Script Editor]
+Pos=1078,117
+Size=595,277
+Collapsed=0
+
 [Table][0xD0F0C6E3,2]
 Column 0  Weight=1.0000
 Column 1  Weight=1.0000
@@ -83,5 +99,7 @@ DockSpace         ID=0x8B93E3BD Window=0xA787BDB4 Pos=0,19 Size=1920,1061 Split=
     DockNode      ID=0x00000006 Parent=0x00000001 SizeRef=292,752 Selected=0x3D5DC369
   DockNode        ID=0x00000002 Parent=0x8B93E3BD SizeRef=1600,1061 Split=X
     DockNode      ID=0x00000003 Parent=0x00000002 SizeRef=388,1061 Selected=0x1D09C2A5
-    DockNode      ID=0x00000004 Parent=0x00000002 SizeRef=1530,1061 CentralNode=1
+    DockNode      ID=0x00000004 Parent=0x00000002 SizeRef=1530,1061 Split=Y
+      DockNode    ID=0x00000009 Parent=0x00000004 SizeRef=1600,869 CentralNode=1
+      DockNode    ID=0x0000000A Parent=0x00000004 SizeRef=1600,190 Selected=0xE07C8FB6
 
