Added imgui spdlog sink for editor logging and added shader text editor

--- a/data/editor.ini
+++ b/data/editor.ini
@@ -21,7 +21,7 @@ Collapsed=0
 
 [Window][Default Scene]
 Pos=0,19
-Size=318,492
+Size=318,342
 Collapsed=0
 DockId=0x0000000B,0
 
@@ -43,10 +43,10 @@ Collapsed=0
 DockId=0x00000003,0
 
 [Window][Renderer Panel]
-Pos=0,513
-Size=318,567
+Pos=0,363
+Size=318,389
 Collapsed=0
-DockId=0x0000000C,0
+DockId=0x00000009,0
 
 [Window][Pipelines]
 Pos=81,607
@@ -74,8 +74,8 @@ Size=345,243
 Collapsed=0
 
 [Window][Scripts Panel]
-Pos=320,890
-Size=1600,190
+Pos=0,754
+Size=318,326
 Collapsed=0
 DockId=0x0000000A,0
 
@@ -84,22 +84,35 @@ Pos=1078,117
 Size=595,277
 Collapsed=0
 
+[Window][Log]
+Pos=320,857
+Size=1600,223
+Collapsed=0
+DockId=0x0000000E,0
+
+[Window][Text Editor]
+Pos=1221,112
+Size=694,414
+Collapsed=0
+
 [Table][0xD0F0C6E3,2]
 Column 0  Weight=1.0000
 Column 1  Weight=1.0000
 
 [Docking][Data]
-DockSpace         ID=0x8B93E3BD Window=0xA787BDB4 Pos=0,19 Size=1920,1061 Split=X
-  DockNode        ID=0x00000001 Parent=0x8B93E3BD SizeRef=318,1061 Split=Y Selected=0x5911271C
-    DockNode      ID=0x00000005 Parent=0x00000001 SizeRef=292,307 Split=Y Selected=0x5911271C
-      DockNode    ID=0x00000007 Parent=0x00000005 SizeRef=292,487 Split=Y Selected=0x5911271C
-        DockNode  ID=0x0000000B Parent=0x00000007 SizeRef=292,492 Selected=0x5911271C
-        DockNode  ID=0x0000000C Parent=0x00000007 SizeRef=292,567 Selected=0x32FCB9E3
-      DockNode    ID=0x00000008 Parent=0x00000005 SizeRef=292,572 Selected=0x3D9D17D5
-    DockNode      ID=0x00000006 Parent=0x00000001 SizeRef=292,752 Selected=0x3D5DC369
-  DockNode        ID=0x00000002 Parent=0x8B93E3BD SizeRef=1600,1061 Split=X
-    DockNode      ID=0x00000003 Parent=0x00000002 SizeRef=388,1061 Selected=0x1D09C2A5
-    DockNode      ID=0x00000004 Parent=0x00000002 SizeRef=1530,1061 Split=Y
-      DockNode    ID=0x00000009 Parent=0x00000004 SizeRef=1600,869 CentralNode=1
-      DockNode    ID=0x0000000A Parent=0x00000004 SizeRef=1600,190 Selected=0xE07C8FB6
+DockSpace           ID=0x8B93E3BD Window=0xA787BDB4 Pos=0,19 Size=1920,1061 Split=X
+  DockNode          ID=0x00000001 Parent=0x8B93E3BD SizeRef=318,1061 Split=Y Selected=0x5911271C
+    DockNode        ID=0x00000005 Parent=0x00000001 SizeRef=292,307 Split=Y Selected=0x5911271C
+      DockNode      ID=0x00000007 Parent=0x00000005 SizeRef=292,487 Split=Y Selected=0x5911271C
+        DockNode    ID=0x0000000B Parent=0x00000007 SizeRef=292,342 Selected=0x5911271C
+        DockNode    ID=0x0000000C Parent=0x00000007 SizeRef=292,717 Split=Y Selected=0x32FCB9E3
+          DockNode  ID=0x00000009 Parent=0x0000000C SizeRef=318,389 Selected=0x32FCB9E3
+          DockNode  ID=0x0000000A Parent=0x0000000C SizeRef=318,326 Selected=0xE07C8FB6
+      DockNode      ID=0x00000008 Parent=0x00000005 SizeRef=292,572 Selected=0x3D9D17D5
+    DockNode        ID=0x00000006 Parent=0x00000001 SizeRef=292,752 Selected=0x3D5DC369
+  DockNode          ID=0x00000002 Parent=0x8B93E3BD SizeRef=1312,1061 Split=X
+    DockNode        ID=0x00000003 Parent=0x00000002 SizeRef=388,1061 Selected=0x1D09C2A5
+    DockNode        ID=0x00000004 Parent=0x00000002 SizeRef=1530,1061 Split=Y
+      DockNode      ID=0x0000000D Parent=0x00000004 SizeRef=1600,836 CentralNode=1
+      DockNode      ID=0x0000000E Parent=0x00000004 SizeRef=1600,223 Selected=0x64F50EE5
 
