--- a/src/editor/CMakeLists.txt
+++ b/src/editor/CMakeLists.txt
@@ -1,4 +1,6 @@
 target_sources(serenity-engine PUBLIC
+	"${SERENITY_ENGINE_INCLUDE_PATH}/editor/imgui_sink.hpp"
+	
 	"${SERENITY_ENGINE_INCLUDE_PATH}/editor/editor.hpp"
 	"editor.cpp"
 )
