Added PBR shaders and option to select script for game object in editor

--- a/data/editor.ini
+++ b/data/editor.ini
@@ -21,15 +21,15 @@ Collapsed=0
 
 [Window][Default Scene]
 Pos=0,19
-Size=318,568
+Size=360,1061
 Collapsed=0
-DockId=0x0000000B,0
+DockId=0x00000007,0
 
 [Window][Atmosphere Settings]
 Pos=0,508
 Size=292,572
 Collapsed=0
-DockId=0x00000008,0
+DockId=0x00000005,0
 
 [Window][Dear ImGui Demo]
 Pos=1038,994
@@ -43,10 +43,10 @@ Collapsed=0
 DockId=0x00000003,0
 
 [Window][Renderer Panel]
-Pos=0,589
-Size=318,291
+Pos=1664,393
+Size=256,687
 Collapsed=0
-DockId=0x00000009,0
+DockId=0x0000000E,0
 
 [Window][Pipelines]
 Pos=81,607
@@ -74,10 +74,10 @@ Size=345,243
 Collapsed=0
 
 [Window][Scripts Panel]
-Pos=0,882
-Size=318,198
+Pos=1664,19
+Size=256,372
 Collapsed=0
-DockId=0x0000000A,0
+DockId=0x0000000D,0
 
 [Window][Script Editor]
 Pos=1078,117
@@ -85,10 +85,10 @@ Size=595,277
 Collapsed=0
 
 [Window][Log]
-Pos=320,857
-Size=1600,223
+Pos=362,878
+Size=1300,202
 Collapsed=0
-DockId=0x0000000E,0
+DockId=0x0000000A,0
 
 [Window][Text Editor]
 Pos=850,103
@@ -101,18 +101,18 @@ Column 1  Weight=1.0000
 
 [Docking][Data]
 DockSpace           ID=0x8B93E3BD Window=0xA787BDB4 Pos=0,19 Size=1920,1061 Split=X
-  DockNode          ID=0x00000001 Parent=0x8B93E3BD SizeRef=318,1061 Split=Y Selected=0x5911271C
-    DockNode        ID=0x00000005 Parent=0x00000001 SizeRef=292,307 Split=Y Selected=0x5911271C
-      DockNode      ID=0x00000007 Parent=0x00000005 SizeRef=292,487 Split=Y Selected=0x5911271C
-        DockNode    ID=0x0000000B Parent=0x00000007 SizeRef=292,568 Selected=0x5911271C
-        DockNode    ID=0x0000000C Parent=0x00000007 SizeRef=292,491 Split=Y Selected=0x32FCB9E3
-          DockNode  ID=0x00000009 Parent=0x0000000C SizeRef=318,291 Selected=0x32FCB9E3
-          DockNode  ID=0x0000000A Parent=0x0000000C SizeRef=318,198 Selected=0xE07C8FB6
-      DockNode      ID=0x00000008 Parent=0x00000005 SizeRef=292,572 Selected=0x3D9D17D5
-    DockNode        ID=0x00000006 Parent=0x00000001 SizeRef=292,752 Selected=0x3D5DC369
-  DockNode          ID=0x00000002 Parent=0x8B93E3BD SizeRef=1312,1061 Split=X
-    DockNode        ID=0x00000003 Parent=0x00000002 SizeRef=388,1061 Selected=0x1D09C2A5
-    DockNode        ID=0x00000004 Parent=0x00000002 SizeRef=1530,1061 Split=Y
-      DockNode      ID=0x0000000D Parent=0x00000004 SizeRef=1600,836 CentralNode=1
-      DockNode      ID=0x0000000E Parent=0x00000004 SizeRef=1600,223 Selected=0x64F50EE5
+  DockNode          ID=0x0000000B Parent=0x8B93E3BD SizeRef=1662,1061 Split=X
+    DockNode        ID=0x00000007 Parent=0x0000000B SizeRef=360,1061 Selected=0x5911271C
+    DockNode        ID=0x00000008 Parent=0x0000000B SizeRef=1558,1061 Split=Y
+      DockNode      ID=0x00000009 Parent=0x00000008 SizeRef=1920,857 Split=X
+        DockNode    ID=0x00000001 Parent=0x00000009 SizeRef=318,1061 Split=Y Selected=0x5911271C
+          DockNode  ID=0x00000005 Parent=0x00000001 SizeRef=292,307 Selected=0x5911271C
+          DockNode  ID=0x00000006 Parent=0x00000001 SizeRef=292,752 Selected=0x3D5DC369
+        DockNode    ID=0x00000002 Parent=0x00000009 SizeRef=1312,1061 Split=X
+          DockNode  ID=0x00000003 Parent=0x00000002 SizeRef=388,1061 Selected=0x1D09C2A5
+          DockNode  ID=0x00000004 Parent=0x00000002 SizeRef=1530,1061 CentralNode=1
+      DockNode      ID=0x0000000A Parent=0x00000008 SizeRef=1920,202 Selected=0x64F50EE5
+  DockNode          ID=0x0000000C Parent=0x8B93E3BD SizeRef=256,1061 Split=Y Selected=0xE07C8FB6
+    DockNode        ID=0x0000000D Parent=0x0000000C SizeRef=256,372 Selected=0xE07C8FB6
+    DockNode        ID=0x0000000E Parent=0x0000000C SizeRef=256,687 Selected=0x32FCB9E3
 
