Added game object panel for editor

--- a/serenity-engine/src/editor/CMakeLists.txt
+++ b/serenity-engine/src/editor/CMakeLists.txt
@@ -3,4 +3,7 @@ target_sources(serenity-engine PUBLIC
 	
 	"${SERENITY_ENGINE_INCLUDE_PATH}/editor/editor.hpp"
 	"editor.cpp"
+
+	"${SERENITY_ENGINE_INCLUDE_PATH}/editor/game_object_panel.hpp"
+	"game_object_panel.cpp"
 )
