--- a/data/editor.ini
+++ b/data/editor.ini
@@ -21,9 +21,9 @@ Collapsed=0
 
 [Window][Default Scene]
 Pos=0,19
-Size=360,1061
+Size=360,572
 Collapsed=0
-DockId=0x00000007,0
+DockId=0x0000000D,0
 
 [Window][Atmosphere Settings]
 Pos=0,508
@@ -43,10 +43,10 @@ Collapsed=0
 DockId=0x00000003,0
 
 [Window][Renderer Panel]
-Pos=1664,393
-Size=256,687
+Pos=1590,552
+Size=330,528
 Collapsed=0
-DockId=0x0000000E,0
+DockId=0x00000012,0
 
 [Window][Pipelines]
 Pos=81,607
@@ -74,10 +74,10 @@ Size=345,243
 Collapsed=0
 
 [Window][Scripts Panel]
-Pos=1664,19
-Size=256,372
+Pos=0,593
+Size=360,487
 Collapsed=0
-DockId=0x0000000D,0
+DockId=0x0000000E,0
 
 [Window][Script Editor]
 Pos=1078,117
@@ -86,7 +86,7 @@ Collapsed=0
 
 [Window][Log]
 Pos=362,878
-Size=1300,202
+Size=1226,202
 Collapsed=0
 DockId=0x0000000A,0
 
@@ -95,24 +95,45 @@ Pos=850,103
 Size=1083,919
 Collapsed=0
 
+[Window][cube2]
+Pos=1559,19
+Size=361,1061
+Collapsed=0
+DockId=0x0000000C,0
+
+[Window][pbr_spheres]
+Pos=906,233
+Size=145,157
+Collapsed=0
+
+[Window][Game Object Panel]
+Pos=1590,19
+Size=330,531
+Collapsed=0
+DockId=0x00000011,0
+
 [Table][0xD0F0C6E3,2]
 Column 0  Weight=1.0000
 Column 1  Weight=1.0000
 
 [Docking][Data]
-DockSpace           ID=0x8B93E3BD Window=0xA787BDB4 Pos=0,19 Size=1920,1061 Split=X
-  DockNode          ID=0x0000000B Parent=0x8B93E3BD SizeRef=1662,1061 Split=X
-    DockNode        ID=0x00000007 Parent=0x0000000B SizeRef=360,1061 Selected=0x5911271C
-    DockNode        ID=0x00000008 Parent=0x0000000B SizeRef=1558,1061 Split=Y
-      DockNode      ID=0x00000009 Parent=0x00000008 SizeRef=1920,857 Split=X
-        DockNode    ID=0x00000001 Parent=0x00000009 SizeRef=318,1061 Split=Y Selected=0x5911271C
-          DockNode  ID=0x00000005 Parent=0x00000001 SizeRef=292,307 Selected=0x5911271C
-          DockNode  ID=0x00000006 Parent=0x00000001 SizeRef=292,752 Selected=0x3D5DC369
-        DockNode    ID=0x00000002 Parent=0x00000009 SizeRef=1312,1061 Split=X
-          DockNode  ID=0x00000003 Parent=0x00000002 SizeRef=388,1061 Selected=0x1D09C2A5
-          DockNode  ID=0x00000004 Parent=0x00000002 SizeRef=1530,1061 CentralNode=1
-      DockNode      ID=0x0000000A Parent=0x00000008 SizeRef=1920,202 Selected=0x64F50EE5
-  DockNode          ID=0x0000000C Parent=0x8B93E3BD SizeRef=256,1061 Split=Y Selected=0xE07C8FB6
-    DockNode        ID=0x0000000D Parent=0x0000000C SizeRef=256,372 Selected=0xE07C8FB6
-    DockNode        ID=0x0000000E Parent=0x0000000C SizeRef=256,687 Selected=0x32FCB9E3
+DockSpace             ID=0x8B93E3BD Window=0xA787BDB4 Pos=0,19 Size=1920,1061 Split=X
+  DockNode            ID=0x0000000F Parent=0x8B93E3BD SizeRef=1588,1061 Split=X
+    DockNode          ID=0x0000000B Parent=0x0000000F SizeRef=1557,1061 Split=X
+      DockNode        ID=0x00000007 Parent=0x0000000B SizeRef=360,1061 Split=Y Selected=0x5911271C
+        DockNode      ID=0x0000000D Parent=0x00000007 SizeRef=360,572 Selected=0x5911271C
+        DockNode      ID=0x0000000E Parent=0x00000007 SizeRef=360,487 Selected=0xE07C8FB6
+      DockNode        ID=0x00000008 Parent=0x0000000B SizeRef=1226,1061 Split=X
+        DockNode      ID=0x00000001 Parent=0x00000008 SizeRef=318,1061 Split=Y Selected=0x5911271C
+          DockNode    ID=0x00000005 Parent=0x00000001 SizeRef=292,307 Selected=0x5911271C
+          DockNode    ID=0x00000006 Parent=0x00000001 SizeRef=292,752 Selected=0x3D5DC369
+        DockNode      ID=0x00000002 Parent=0x00000008 SizeRef=1312,1061 Split=X
+          DockNode    ID=0x00000003 Parent=0x00000002 SizeRef=388,1061 Selected=0x1D09C2A5
+          DockNode    ID=0x00000004 Parent=0x00000002 SizeRef=1530,1061 Split=Y
+            DockNode  ID=0x00000009 Parent=0x00000004 SizeRef=1300,857 CentralNode=1
+            DockNode  ID=0x0000000A Parent=0x00000004 SizeRef=1300,202 Selected=0x64F50EE5
+    DockNode          ID=0x0000000C Parent=0x0000000F SizeRef=361,1061 Selected=0x5024C6BC
+  DockNode            ID=0x00000010 Parent=0x8B93E3BD SizeRef=330,1061 Split=Y Selected=0xA7C79B29
+    DockNode          ID=0x00000011 Parent=0x00000010 SizeRef=572,531 Selected=0xA7C79B29
+    DockNode          ID=0x00000012 Parent=0x00000010 SizeRef=572,528 Selected=0x32FCB9E3
 
