Added option to reload scene game objects within editor, [WIP] cube game basic directory setup

--- a/data/editor.ini
+++ b/data/editor.ini
@@ -91,9 +91,10 @@ Collapsed=0
 DockId=0x0000000A,0
 
 [Window][Text Editor]
-Pos=850,103
-Size=1083,919
+Pos=977,19
+Size=611,857
 Collapsed=0
+DockId=0x00000014,0
 
 [Window][cube2]
 Pos=1559,19
@@ -117,23 +118,25 @@ Column 0  Weight=1.0000
 Column 1  Weight=1.0000
 
 [Docking][Data]
-DockSpace             ID=0x8B93E3BD Window=0xA787BDB4 Pos=0,19 Size=1920,1061 Split=X
-  DockNode            ID=0x0000000F Parent=0x8B93E3BD SizeRef=1588,1061 Split=X
-    DockNode          ID=0x0000000B Parent=0x0000000F SizeRef=1557,1061 Split=X
-      DockNode        ID=0x00000007 Parent=0x0000000B SizeRef=360,1061 Split=Y Selected=0x5911271C
-        DockNode      ID=0x0000000D Parent=0x00000007 SizeRef=360,572 Selected=0x5911271C
-        DockNode      ID=0x0000000E Parent=0x00000007 SizeRef=360,487 Selected=0xE07C8FB6
-      DockNode        ID=0x00000008 Parent=0x0000000B SizeRef=1226,1061 Split=X
-        DockNode      ID=0x00000001 Parent=0x00000008 SizeRef=318,1061 Split=Y Selected=0x5911271C
-          DockNode    ID=0x00000005 Parent=0x00000001 SizeRef=292,307 Selected=0x5911271C
-          DockNode    ID=0x00000006 Parent=0x00000001 SizeRef=292,752 Selected=0x3D5DC369
-        DockNode      ID=0x00000002 Parent=0x00000008 SizeRef=1312,1061 Split=X
-          DockNode    ID=0x00000003 Parent=0x00000002 SizeRef=388,1061 Selected=0x1D09C2A5
-          DockNode    ID=0x00000004 Parent=0x00000002 SizeRef=1530,1061 Split=Y
-            DockNode  ID=0x00000009 Parent=0x00000004 SizeRef=1300,857 CentralNode=1
-            DockNode  ID=0x0000000A Parent=0x00000004 SizeRef=1300,202 Selected=0x64F50EE5
-    DockNode          ID=0x0000000C Parent=0x0000000F SizeRef=361,1061 Selected=0x5024C6BC
-  DockNode            ID=0x00000010 Parent=0x8B93E3BD SizeRef=330,1061 Split=Y Selected=0xA7C79B29
-    DockNode          ID=0x00000011 Parent=0x00000010 SizeRef=572,531 Selected=0xA7C79B29
-    DockNode          ID=0x00000012 Parent=0x00000010 SizeRef=572,528 Selected=0x32FCB9E3
+DockSpace               ID=0x8B93E3BD Window=0xA787BDB4 Pos=0,19 Size=1920,1061 Split=X
+  DockNode              ID=0x0000000F Parent=0x8B93E3BD SizeRef=1588,1061 Split=X
+    DockNode            ID=0x0000000B Parent=0x0000000F SizeRef=1557,1061 Split=X
+      DockNode          ID=0x00000007 Parent=0x0000000B SizeRef=360,1061 Split=Y Selected=0x5911271C
+        DockNode        ID=0x0000000D Parent=0x00000007 SizeRef=360,572 Selected=0x5911271C
+        DockNode        ID=0x0000000E Parent=0x00000007 SizeRef=360,487 Selected=0xE07C8FB6
+      DockNode          ID=0x00000008 Parent=0x0000000B SizeRef=1226,1061 Split=X
+        DockNode        ID=0x00000001 Parent=0x00000008 SizeRef=318,1061 Split=Y Selected=0x5911271C
+          DockNode      ID=0x00000005 Parent=0x00000001 SizeRef=292,307 Selected=0x5911271C
+          DockNode      ID=0x00000006 Parent=0x00000001 SizeRef=292,752 Selected=0x3D5DC369
+        DockNode        ID=0x00000002 Parent=0x00000008 SizeRef=1312,1061 Split=X
+          DockNode      ID=0x00000003 Parent=0x00000002 SizeRef=388,1061 Selected=0x1D09C2A5
+          DockNode      ID=0x00000004 Parent=0x00000002 SizeRef=1530,1061 Split=Y
+            DockNode    ID=0x00000009 Parent=0x00000004 SizeRef=1300,857 Split=X
+              DockNode  ID=0x00000013 Parent=0x00000009 SizeRef=613,857 CentralNode=1
+              DockNode  ID=0x00000014 Parent=0x00000009 SizeRef=611,857 Selected=0xE6C27CC7
+            DockNode    ID=0x0000000A Parent=0x00000004 SizeRef=1300,202 Selected=0x64F50EE5
+    DockNode            ID=0x0000000C Parent=0x0000000F SizeRef=361,1061 Selected=0x5024C6BC
+  DockNode              ID=0x00000010 Parent=0x8B93E3BD SizeRef=330,1061 Split=Y Selected=0xA7C79B29
+    DockNode            ID=0x00000011 Parent=0x00000010 SizeRef=572,531 Selected=0xA7C79B29
+    DockNode            ID=0x00000012 Parent=0x00000010 SizeRef=572,528 Selected=0x32FCB9E3
 
