Added editor ui callbacks, use unordered map for game objects over std::vector

--- a/data/editor.ini
+++ b/data/editor.ini
@@ -43,8 +43,8 @@ Collapsed=0
 DockId=0x00000003,0
 
 [Window][Renderer Panel]
-Pos=1590,552
-Size=330,528
+Pos=1590,19
+Size=330,1061
 Collapsed=0
 DockId=0x00000012,0
 
@@ -112,6 +112,11 @@ Pos=1590,19
 Size=330,531
 Collapsed=0
 DockId=0x00000011,0
+
+[Window][Game Settings]
+Pos=370,39
+Size=323,223
+Collapsed=0
 
 [Table][0xD0F0C6E3,2]
 Column 0  Weight=1.0000
